# devapack

./: .gitignore  Cargo.toml  LICENSE  README.md  package.json  project-version.json  tsconfig.json
.github/workflows/: ci.yml
docs/: BANKS.md  PLUGINS.md
out-tsc/: index.js
out-tsc/scripts/: postinstall.js
out-tsc/scripts/version/: bump.js  copy-to-binary.js  fetch.js  index.js  sync.js
src/: main.rs
src/addon/: mod.rs  remote_sign.rs  self_sign.rs  summary.rs
src/addon/bank/: manage.rs  mod.rs  prompt.rs  scaffold.rs
src/addon/plugin/: manage.rs  mod.rs  prompt.rs  scaffold.rs
src/addon/plugin/preset/: empty.rs  mod.rs  synth.rs
src/addon/publish/: request.rs
src/addon/submit/: analyze.rs  discover.rs  mod.rs  prompt.rs  request.rs
src/addon/update/: mod.rs  prompt.rs  request.rs
src/builder/: bank.rs  mod.rs  plugin.rs
src/publisher/: create.rs  list.rs  mod.rs  request.rs  update.rs
src/types/: addon.rs  mod.rs  publisher.rs
src/utils/: api.rs  auth.rs  fs.rs  kebab_case.rs  logger.rs  mod.rs  path.rs  semver.rs  signature.rs  signing.rs  spinner.rs  version.rs
typescript/: index.ts
typescript/scripts/: postinstall.ts
typescript/scripts/version/: bump.ts  copy-to-binary.ts  fetch.ts  index.ts  sync.ts
