[package]
name = "devapack"
version = "0.0.1"
authors = ["Labscend Studios <hello@labscend.studio>"]
description = "Addon generator and packager for Devalang"
edition = "2024"
license = "MIT"
keywords = ["music", "dsl", "audio", "cli"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "devapack"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
crossterm = "0.27"
which = "6.0"
fs_extra = "1.3"
toml = "0.8"
wasmparser = "0.208"
inquire = "0.7.5"
indicatif = "0.17"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
reqwest = { version = "0.11", features = ["blocking", "json", "rustls-tls", "multipart"] }
dirs = "5"
flate2 = "1.0"
tar = "0.4"
sha2 = "0.10"
ed25519-dalek = { version = "1", features = ["std"] }
rand = "0.8"
base64 = "0.21"
hex = "0.4"
getrandom = "0.2"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
assert_cmd = "2.0"

[workspace]
members = ["."]
exclude = []

[features]
default = ["cli"]
cli = []